--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 trainer/trainer.yml filter=lfs diff=lfs merge=lfs -text
+auth/lib/python3.10/site-packages/cv2/cv2.abi3.so filter=lfs diff=lfs merge=lfs -text
+auth/lib/python3.10/site-packages/numpy/.dylibs/libopenblas64_.0.dylib filter=lfs diff=lfs merge=lfs -text
